@@ -1,3 +1,9 @@
+2004-06-30  Brad Spencer  <spencer@infointeractive.com>
+
+	* include/ext/mt_allocator.h: Handle allocations at static
+	initialization that happen before _S_options is (automatically)
+	constructed; set _S_init even if _M_force_new is true.
+	
 2004-06-30  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* config/linker-map.gnu: Revert new exports.
